ah sí, y para regodeo me he hecho un putísimo tema también
Co-Authored-By: sergiogimenezgomez19-dev <237021618+sergiogimenezgomez19-dev@users.noreply.github.com>

--- a/ProyectoCampingParty/src/main/java/CONTROLADOR/RuiRauLaf.properties
+++ b/ProyectoCampingParty/src/main/java/CONTROLADOR/RuiRauLaf.properties
@@ -1,36 +1,52 @@
 @baseTheme = light
-@background = #1A102A
+@background = #FEFDFF
 
-@accentColor =#BC488B
+@accentColor =#2A573F
 
-@accentBaseColor = #716AD4
-@foreground = #EDE4F8
-@accentFocusColor = #716AD4
+@accentBaseColor = #B7D4AF
+@foreground = #2A573F
+@foreground = #214C36
+Button.darkShadow = #B7D4AF
+Button.default.pressedBackground = #B7D4AF
+ToggleButton.pressedBackground = #B7D4AF
+ToggleButton.selectedBackground = #B7D4AF
+Background = #B7D4AF
 
-@dropLineColor = #BC488B
-@accentLinkColor = #BC488B
-@dropCellForeground = #372664
+@accentFocusColor = #548C6C
+
+@dropLineColor = #548C6C
+@accentLinkColor = #548C6C
+@dropCellForeground = #B7D4AF
 
 Button.arc = 5
 ScrollBar.trackArc = 999
 ScrollBar.thumbArc = 999
 ScrollBar.trackInsets = 2,4,2,4
 ScrollBar.thumbInsets = 2,2,2,2
-ScrollBar.thumbHighlight = #EDE4F8
-ScrollBar.track = #372664
-ProgressBar.foreground = #716AD4
+ScrollBar.thumbHighlight = #548C6C
+ScrollBar.track = #548C6C
+ScrollBar.foreground = #548C6C
+ScrollBar.thumb =  #548C6C
+ProgressBar.foreground = #548C6C
+ProgressBar.background =  #D7E2D3
+Slider.foreground = #548C6C
+Slider.trackColor =  #B7D4AF
+Slider.thumbColor = #548C6C
 ComboBox.buttonStyle =	chevron
 Component.focusWidth = 1
 Component.innerFocusWidth = 1
-TabbedPane.selectedBackground = #716AD4
-TabbedPane.underlineColor =  #716AD4
+TabbedPane.selectedBackground = #D7E2D3
+TabbedPane.underlineColor =  #548C6C 
+List.selectionBackground = #CDE0C6
+TabbedPane.hoverColor = #B7D4AF
+List.selectionForeground =  #214C36
 TabbedPane.tabArc = 10
-ToolTip.font = Montserrat
-defaultFont = 13 "Inter"
+ToolTip.font = "Helvetica"
+defaultFont = 12 "Helvetica"
 h00.font = +24 $bold.font
 
 ToolTip.font = $semibold.font
-h1.font = "Inter" bold
-h2.font = "Inter" bold
-h3.font = "Inter" bold
+h1.font = "HelveticaNowDisplayMedium"
+h2.font = "HelveticaDisplayMedium"
+h3.font = "HelveticaDisplayMedium"
 semibold.font = "Inter" bold
