--- a/ProyectoCampingParty/src/main/java/CONTROLADOR/RuiRauLaf.properties
+++ b/ProyectoCampingParty/src/main/java/CONTROLADOR/RuiRauLaf.properties
@@ -49,4 +49,4 @@ ToolTip.font = $semibold.font
 h1.font = "HelveticaNowDisplayMedium"
 h2.font = "HelveticaDisplayMedium"
 h3.font = "HelveticaDisplayMedium"
-semibold.font = "Inter" bold
+semibold.font = "Helvetica" bold
