--- a/ProyectoCampingParty/src/main/java/CONTROLADOR/RuiRauLaf.properties
+++ b/ProyectoCampingParty/src/main/java/CONTROLADOR/RuiRauLaf.properties
@@ -4,6 +4,7 @@
 @accentColor =#2A573F
 
 @accentBaseColor = #B7D4AF
+@accentSelectionBackground = #D7E2D3
 @foreground = #2A573F
 @foreground = #214C36
 Button.darkShadow = #B7D4AF
