--- a/ProyectoCampingParty/src/main/java/CONTROLADOR/RuiRauLaf.properties
+++ b/ProyectoCampingParty/src/main/java/CONTROLADOR/RuiRauLaf.properties
@@ -42,12 +42,12 @@ List.selectionBackground = #CDE0C6
 TabbedPane.hoverColor = #B7D4AF
 List.selectionForeground =  #214C36
 TabbedPane.tabArc = 10
-ToolTip.font = "Helvetica"
+ToolTip.font = "HelveticaNowDisplay" Regular
 defaultFont = 12 "Helvetica"
 h00.font = +24 $bold.font
 
 ToolTip.font = $semibold.font
-h1.font = "HelveticaNowDisplayMedium"
-h2.font = "HelveticaDisplayMedium"
+h1.font = "HelveticaNowDisplay"
+h2.font = "HelveticaNowDisplay"
 h3.font = "HelveticaDisplayMedium"
-semibold.font = "Helvetica" bold
+semibold.font = "Helvetica"
