--- a/ProyectoCampingParty/src/main/java/CONTROLADOR/RuiRauLaf.properties
+++ b/ProyectoCampingParty/src/main/java/CONTROLADOR/RuiRauLaf.properties
@@ -42,7 +42,7 @@ List.selectionBackground = #CDE0C6
 TabbedPane.hoverColor = #B7D4AF
 List.selectionForeground =  #214C36
 TabbedPane.tabArc = 10
-ToolTip.font = "HelveticaNowDisplay" Regular
+ToolTip.font = "HelveticaNowDisplay"
 defaultFont = 12 "Helvetica"
 h00.font = +24 $bold.font
 
